From 070e616 (master):
=====================

In run_prisim.py,

(*) Pre-compute sources in sky model in FOV defined by ROI radius
(*) Use these sources to determine memory requirements instead of the
full sky model sources

From 378c269 (master):
=====================

In scripts/run_prisim.py,

(*) Import warnigns module
(*) Isuue warning instead of raising an exception when the code runs
into a chunking problem, and pause the code for diagnosis instead of
exiting

From 7c5fdda (gleam):
====================

In prisim/examples/simparms/defaultparms.yaml,

(*) Replace fgparm with skyparm

In scripts/run_prisim.py,

(*) Replace all usage of 'fg' with 'sky' in variables

In prisim/interfrometry.py,

(*) Replace all usage of 'fg' with 'sky' in variables

From 0ec6259 (gleam):
====================

In scripts/run_prisim.py,

(*) Remove unused subset() operations on skymod object

From caa2ea2 (gleam):
====================

In prisim/examples/simparms/defaultparms.yaml,

(*) Add parameter roi_radius under sky model parameters

In scripts/run_prisim.py,

(*) Read and pass roi_radius in calls to
RI.InterferometerArray.observe()
(*) Select the visible sources from the sky model based on roi_radius
(*) Assumption that roi_radius is always 90 is now replaced with
specified roi_radius

From 9662bf2 (data):
===================

In prisim/examples/ioparms/data_setup_parms.yaml,

(*) Update URL for PRISim data in prisim_data.tar.gz
(*) HERA beam has been updated in prisim_data.tar.gz from earlier
HFSS beam to Nicolas Fagnoni's simulated beam

In prisim/examples/simparms/defaultparms.yaml,

(*) Update name of external beam from earlier HFSS beam in the
prisim/data/beams/ directory to Nicolas Fagnoni's simulated HERA
beam in uvbeam format
(*) Update default value for filefmt and identifier for external
beam

In README.rst,

(*) Update URL for prisim_data.tar.gz

From e75a1f7 (data):
===================

In scripts/setup_prisim_data.py,

(*) Remove commented portions
